Improved the Duplicate node to support one-to-many connections.
Original duplicate node mechanism was based utpon the two C++ template
Duplicate2 and Duplicate3 and was limited to 3 outputs.

THe new design is using a list of output FIFOs and support as many
outputs as needed.

--- a/.gitignore
+++ b/.gitignore
@@ -31,5 +31,7 @@ Examples/build/bin_*
 Tests/out/
 Tests/tmp/
 Examples/simple/simple
-
+Examples/build_linux/
+Tests/build/
+Examples/eventrecorder/RTE/_CommandLine_VHT-Corstone-300/
 
