--- a/Examples/simple/CMakeLists.txt
+++ b/Examples/simple/CMakeLists.txt
@@ -6,8 +6,7 @@ project(Simple)
 
 add_executable(simple main.cpp)
 
-sdf(simple create.py simple)
+sdfroot(simple create.py simple)
 add_sdf_dir(simple)
 
 target_include_directories(simple PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
-target_include_directories(simple PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/generated)
