--- a/Examples/simple/Makefile.linux
+++ b/Examples/simple/Makefile.linux
@@ -1,11 +1,11 @@
 # Makefile for gcc compiler on Linux
 CC = g++
 
-INCLUDES = -Igenerated -I../../Include/cg/src -I.
+INCLUDES = -I.
 CFLAGS =  -std=c++11 $(INCLUDES)
 
 all:
-	$(CC) -o simple $(CFLAGS) generated/scheduler.cpp main.cpp
+	$(CC) -o simple $(CFLAGS) ./scheduler.cpp main.cpp
 
 clean:
 	rm -f ./simple
