--- a/Examples/simple/Makefile.windows
+++ b/Examples/simple/Makefile.windows
@@ -3,12 +3,12 @@ SHELL = cmd
 CC = cl.exe
 RM = del /Q /F
 
-INCLUDES = /Igenerated /I../../Include/cg/src /I.
+INCLUDES = /I.
 WINFLAGS = /DWIN32 /D_WINDOWS /EHsc /Zi /Ob0 /Od /RTC1 -MDd 
 CFLAGS =  $(INCLUDES) $(WINFLAGS)
 
 all:
-	$(CC) /Fesimple.exe $(CFLAGS) generated/scheduler.cpp main.cpp
+	$(CC) /Fesimple.exe $(CFLAGS) ./scheduler.cpp main.cpp
 
 clean:
 	$(RM) main.obj
