Upgraded eventrecorder example to CMSIS build tools 2.0

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@ Tests/build/
 Examples/eventrecorder/RTE/_CommandLine_VHT-Corstone-300/
 Examples/graphvizexample/dots/
 Examples/graphvizexample/features/
+Examples/eventrecorder/*.cbuild-idx.yml
