--- a/Tests/fifo.CommandLine+VHT-Corstone-300.cbuild.yml
+++ b/Tests/fifo.CommandLine+VHT-Corstone-300.cbuild.yml
@@ -1,12 +1,12 @@
 build:
-  solution: example.csolution_ac6.yml
+  generated-by: csolution version 2.0.0
+  solution: example_ac6.csolution.yml
   project: fifo.cproject.yml
   context: fifo.CommandLine+VHT-Corstone-300
   compiler: AC6
   device: ARM::SSE-300-MPS3
   processor:
     fpu: on
-    trustzone: non-secure
   packs:
     - pack: ARM::CMSIS-DSP@1.14.4
       path: ${CMSIS_PACK_ROOT}/ARM/CMSIS-DSP/1.14.4
@@ -79,11 +79,13 @@ build:
     - ${CMSIS_PACK_ROOT}/ARM/V2M_MPS3_SSE_300_BSP/1.3.0/Device/Include
     - ${CMSIS_PACK_ROOT}/ARM/V2M_MPS3_SSE_300_BSP/1.3.0/Native_Driver
     - ${CMSIS_PACK_ROOT}/Keil/ARM_Compiler/1.7.2/Include
-  output-type: exe
   output-dirs:
     intdir: tmp/fifo/VHT-Corstone-300/CommandLine
     outdir: out/fifo/VHT-Corstone-300/CommandLine
     rtedir: RTE
+  output:
+    - type: elf
+      file: fifo.axf
   components:
     - component: ARM::CMSIS:CORE@5.6.0
       condition: ARMv6_7_8-M Device
@@ -279,6 +281,8 @@ build:
           category: header
           attr: config
           version: 1.1.0
+  linker:
+    script: RTE/Device/SSE-300-MPS3/fvp_sse300_mps3_s.sct
   groups:
     - group: App
       files:
