--- a/Tests/fifo.cproject.yml
+++ b/Tests/fifo.cproject.yml
@@ -11,13 +11,13 @@ project:
     - component: ARM::CMSIS:DSP&Source@1.14.4
     - component: ARM::CMSIS:RTOS2:Keil RTX5&Source@5.5.4 
     - component: Keil::Compiler&ARM Compiler:Event Recorder&Semihosting@1.5.1
-      for-type: 
+      for-context: 
           - .CommandLine
     - component: Keil::Compiler&ARM Compiler:Event Recorder&DAP@1.5.1
-      for-type: 
+      for-context: 
           - .IDE
     - component: Keil::Compiler&ARM Compiler:I/O:STDOUT&EVR
-      for-type: 
+      for-context: 
           - .IDE
   
   layers:
