--- a/Tests/vht.clayer.yml
+++ b/Tests/vht.clayer.yml
@@ -5,26 +5,26 @@ layer:
   components:
     - component: ARM::CMSIS:CORE
     - component: Device:Startup&C Startup
-      not-for-type: 
+      not-for-context: 
         - +VHT-Corstone-300 
         - +VHT-Corstone-310
     - component: ARM::Device:Definition
-      for-type: 
+      for-context: 
         - +VHT-Corstone-300 
         - +VHT-Corstone-310
     - component: ARM::Device:Startup&Baremetal
-      for-type: 
+      for-context: 
         - +VHT-Corstone-300 
         - +VHT-Corstone-310
     - component: ARM::Native Driver:Timeout
-      for-type: 
+      for-context: 
         - +VHT-Corstone-300 
         - +VHT-Corstone-310
     - component: ARM::Native Driver:SysCounter
-      for-type: 
+      for-context: 
         - +VHT-Corstone-300 
         - +VHT-Corstone-310
     - component: ARM::Native Driver:SysTimer
-      for-type: 
+      for-context: 
         - +VHT-Corstone-300 
         - +VHT-Corstone-310
