Improved asynchronous mode
Introduces a new asynchronous mode and deprecates the old one.
The new mode has no relationship any more with the synchronous
scheduling and is simpler to process by the script.

--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -118,6 +118,8 @@ add_subdirectory(example6 bin_example6)
 add_subdirectory(example8 bin_example8)
 add_subdirectory(example9 bin_example9)
 add_subdirectory(example10 bin_example10)
+add_subdirectory(example11 bin_example11)
+
 add_subdirectory(simple bin_simple)
 add_subdirectory(simpledsp bin_simpledsp)
 add_subdirectory(cyclo bin_cyclo)
