--- a/Examples/runtime_mode/config.yml
+++ b/Examples/runtime_mode/config.yml
@@ -1,4 +1,6 @@
 version: 1.1.0
+schedule-options:
+  memory-optimization: true
 code-generation-options:
   debug-limit: 1
 c-code-generation-options:
