--- a/Examples/runtime_mode/Makefile.windows
+++ b/Examples/runtime_mode/Makefile.windows
@@ -3,12 +3,12 @@ SHELL = cmd
 CC = cl.exe
 RM = del /Q /F
 
-INCLUDES = /I. /I "C:/ctools_pack/tensorflow/flatbuffers/1.23.2/src/include"
+INCLUDES = /I. /I "flatbuffers_1.23.2/include"
 WINFLAGS = /DWIN32 /D_WINDOWS /EHsc /Zi /Ob0 /Od /RTC1 -MDd 
 CFLAGS =  /std:c++17 $(INCLUDES) $(WINFLAGS)
 
 all:
-	$(CC) /Feruntime_mode.exe $(CFLAGS) ./runtime_sched.cpp main.cpp sched_flat.c
+	$(CC) /Feruntime_mode.exe $(CFLAGS) ./runtime_sched.cpp main.cpp 
 
 clean:
 	$(RM) main.obj
