--- a/Examples/runtime_mode/Makefile.linux
+++ b/Examples/runtime_mode/Makefile.linux
@@ -1,12 +1,12 @@
 # Makefile for gcc compiler on Linux
 CC = g++
 
-INCLUDES = -I.
+INCLUDES = -I. -Iflatbuffers_1.23.2/include
 CFLAGS =  -std=c++11 $(INCLUDES)
 
 all:
-	$(CC) -o simple $(CFLAGS) ./scheduler.cpp main.cpp
+	$(CC) -o runtime_mode $(CFLAGS) ./runtime_sched.cpp main.cpp 
 
 clean:
-	rm -f ./simple
+	rm -f ./runtime_mode
 	
