Relaxed constraints on Duplicate node to  minimize copies in memory optimization mode.
Updated buffer example with different use of the duplicate node.

--- a/Examples/buffer/graph.yml
+++ b/Examples/buffer/graph.yml
@@ -26,6 +26,8 @@ graph:
     - input: i
       samples: 5
       type: float
+    args:
+    - literal: sink2
   - node: processing2
     identified: true
     kind: ProcessingNode
@@ -55,6 +57,8 @@ graph:
     - input: i
       samples: 5
       type: float
+    args:
+    - literal: sink1
   edges:
   - src:
       node: source
