--- a/Examples/buffer/constraint_config1.yml
+++ b/Examples/buffer/constraint_config1.yml
@@ -1,6 +1,8 @@
-version: 1.1.0
+version: 2.0.0
 schedule-options:
   memory-optimization: true
+  mem-strategy: independent_set
+  buffer-allocation: true
 code-generation-options:
   debug-limit: 1
   fifo-prefix: cv
@@ -8,4 +10,5 @@ c-code-generation-options:
   c-optional-args:
   - uint8_t *myBuffer
   - uint8_t *myBufferB
+  scheduler-c-file-name: cv_scheduler1
 
