--- a/Examples/buffer/constraint_graph_2.yml
+++ b/Examples/buffer/constraint_graph_2.yml
@@ -1,45 +1,18 @@
-version: 1.1.0
+version: 2.0.0
 graph:
   nodes:
   - node: source
     identified: true
-    kind: Source
+    kind: SourceC2
     outputs:
     - output: o
       samples: 5
       type: float
+      buffer-constraint:
+        name: Test
+        must-be-array: true
+        assigned-by-node: true
   - node: processing1
-    identified: true
-    kind: ProcessingNode
-    inputs:
-    - input: i
-      samples: 5
-      type: float
-    outputs:
-    - output: o
-      samples: 5
-      type: float
-  - node: sink2
-    identified: true
-    kind: Sink
-    inputs:
-    - input: i
-      samples: 5
-      type: float
-    args:
-    - literal: sink2
-  - node: processing2
-    identified: true
-    kind: ProcessingNode
-    inputs:
-    - input: i
-      samples: 5
-      type: float
-    outputs:
-    - output: o
-      samples: 5
-      type: float
-  - node: processing3
     identified: true
     kind: ProcessingNode
     inputs:
@@ -59,6 +32,15 @@ graph:
       type: float
     args:
     - literal: sink1
+  - node: sink2
+    identified: true
+    kind: Sink
+    inputs:
+    - input: i
+      samples: 5
+      type: float
+    args:
+    - literal: sink2
   edges:
   - src:
       node: source
@@ -70,24 +52,12 @@ graph:
       node: processing1
       output: o
     dst:
-      node: sink2
+      node: sink1
       input: i
   - src:
       node: processing1
       output: o
     dst:
-      node: processing2
-      input: i
-  - src:
-      node: processing2
-      output: o
-    dst:
-      node: processing3
-      input: i
-  - src:
-      node: processing3
-      output: o
-    dst:
-      node: sink1
+      node: sink2
       input: i
 
