--- a/Examples/yaml/graph2.yml
+++ b/Examples/yaml/graph2.yml
@@ -1,4 +1,4 @@
-version: 1.1.0
+version: 2.0.0
 graph:
   custom-types:
     complex:
@@ -29,49 +29,59 @@ graph:
     outputs:
       samples: 5
       type: float
-      names:
-      - oa
-      - ob
-      - oc
-      - od
-      - oe
+      descriptions:
+      - output: oa
+      - output: ob
+      - output: oc
+      - output: od
+      - output: oe
   - node: processing
     identified: true
     kind: ProcessingNode
     inputs:
       samples: 7
       type: float
-      names:
-      - ia
-      - ib
-      - ic
-      - id
-      - ie
+      descriptions:
+      - input: ia
+      - input:
+          name: ib
+          buffer-constraint:
+            name: Testi_processing
+            must-be-array: false
+            assigned-by-node: false
+      - input: ic
+      - input: id
+      - input: ie
     outputs:
       samples: 5
       type: complex
-      names:
-      - oa
-      - ob
-      - oc
-      - od
-      - oe
-      - of
-      - og
+      descriptions:
+      - output:
+          name: oa
+          buffer-constraint:
+            name: Testo_processing
+            must-be-array: false
+            assigned-by-node: false
+      - output: ob
+      - output: oc
+      - output: od
+      - output: oe
+      - output: of
+      - output: og
   - node: toSink
     identified: true
     kind: ToSink
     inputs:
       samples: 5
       type: complex
-      names:
-      - ia
-      - ib
-      - ic
-      - id
-      - ie
-      - if
-      - ig
+      descriptions:
+      - input: ia
+      - input: ib
+      - input: ic
+      - input: id
+      - input: ie
+      - input: if
+      - input: ig
     outputs:
     - output: o
       samples: 1
