--- a/Examples/buffer/constraint_graph_2.yml
+++ b/Examples/buffer/constraint_graph_2.yml
@@ -12,6 +12,7 @@ graph:
         name: Test
         must-be-array: true
         assigned-by-node: true
+        can-be-shared: true
   - node: processing1
     identified: true
     kind: ProcessingNode
