--- a/Examples/buffer/constraint_graph_3.yml
+++ b/Examples/buffer/constraint_graph_3.yml
@@ -12,6 +12,7 @@ graph:
         name: Test
         must-be-array: true
         assigned-by-node: false
+        can-be-shared: true
   - node: processing1
     identified: true
     kind: ProcessingNodeCC
@@ -23,6 +24,7 @@ graph:
         name: Test
         must-be-array: true
         assigned-by-node: false
+        can-be-shared: true
     outputs:
     - output: o
       samples: 5
