--- a/Examples/buffer/constraint_graph_8.yml
+++ b/Examples/buffer/constraint_graph_8.yml
@@ -19,6 +19,7 @@ graph:
         name: Test2
         must-be-array: true
         assigned-by-node: false
+        can-be-shared: true
     outputs:
     - output: o
       samples: 5
@@ -49,4 +50,5 @@ graph:
       name: Test
       must-be-array: true
       assigned-by-node: false
+      can-be-shared: true
 
