--- a/Examples/buffer/constraint_graph_b_10.yml
+++ b/Examples/buffer/constraint_graph_b_10.yml
@@ -3,27 +3,16 @@ graph:
   nodes:
   - node: source
     identified: true
-    kind: SourceC1
+    kind: SourceC3
     outputs:
     - output: o
       samples: 5
       type: float
       buffer-constraint:
         name: Test
-        must-be-array: true
+        must-be-array: false
         assigned-by-node: false
         can-be-shared: true
-  - node: processing1
-    identified: true
-    kind: ProcessingNode
-    inputs:
-    - input: i
-      samples: 7
-      type: float
-    outputs:
-    - output: o
-      samples: 5
-      type: float
   - node: sink1
     identified: true
     kind: Sink
@@ -47,16 +36,10 @@ graph:
       node: source
       output: o
     dst:
-      node: processing1
-      input: i
-  - src:
-      node: processing1
-      output: o
-    dst:
       node: sink1
       input: i
   - src:
-      node: processing1
+      node: source
       output: o
     dst:
       node: sink2
