--- a/Examples/buffer/constraint_graph_b_13.yml
+++ b/Examples/buffer/constraint_graph_b_13.yml
@@ -3,43 +3,42 @@ graph:
   nodes:
   - node: source
     identified: true
-    kind: SourceC1
+    kind: SourceC3
     outputs:
     - output: o
       samples: 5
       type: float
       buffer-constraint:
         name: Test
-        must-be-array: true
+        must-be-array: false
         assigned-by-node: false
         can-be-shared: true
-  - node: processing1
-    identified: true
-    kind: ProcessingNode
-    inputs:
-    - input: i
-      samples: 7
-      type: float
-    outputs:
-    - output: o
-      samples: 5
-      type: float
   - node: sink1
     identified: true
-    kind: Sink
+    kind: SinkC
     inputs:
     - input: i
       samples: 5
       type: float
+      buffer-constraint:
+        name: Test
+        must-be-array: false
+        assigned-by-node: false
+        can-be-shared: true
     args:
     - literal: sink1
   - node: sink2
     identified: true
-    kind: Sink
+    kind: SinkC
     inputs:
     - input: i
       samples: 5
       type: float
+      buffer-constraint:
+        name: Test
+        must-be-array: false
+        assigned-by-node: false
+        can-be-shared: true
     args:
     - literal: sink2
   edges:
@@ -47,16 +46,10 @@ graph:
       node: source
       output: o
     dst:
-      node: processing1
-      input: i
-  - src:
-      node: processing1
-      output: o
-    dst:
       node: sink1
       input: i
   - src:
-      node: processing1
+      node: source
       output: o
     dst:
       node: sink2
