--- a/Examples/buffer/graph.yml
+++ b/Examples/buffer/graph.yml
@@ -70,6 +70,7 @@ graph:
       name: myBuffer
       must-be-array: true
       assigned-by-node: false
+      can-be-shared: true
   - src:
       node: processing1
       output: o
